# project-templates

./: README.md
dataflow-template/: cookiecutter.json
dataflow-template-extras/: README.md  cookiecutter.json
dataflow-template-extras/hooks/: post_gen_project.py
dataflow-template-extras/{{ cookiecutter.project_slug }}/: pyproject.toml
dataflow-template/hooks/: post_gen_project.py  post_gen_project.sh  pre_gen_project.sh
dataflow-template/{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml
