[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "{{ cookiecutter.package_name }}", from = "src"}]


[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.265"


[tool.poetry.group.dev.dependencies]
{% if cookiecutter.add_jupyter == 'y' -%}
jupyter = "^1.0.0"
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
